--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ project(Rtype)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(THREAD)
-
 set(NETWORK_SOURCE_FILES
         Sources/Network/Socket/ASocket.cpp
         Sources/Network/Socket/TcpSocket.cpp
@@ -12,6 +10,23 @@ set(NETWORK_SOURCE_FILES
         Sources/Network/Socket/Packet.cpp
         Sources/Network/Logger/Logger.cpp
         Sources/Network/Exception/NetworkException.cpp
-        Sources/Network/AClient.cpp Sources/Network/AServer.cpp Sources/Server/Server.cpp Sources/Server/Server.hpp)
+        Sources/Network/AClient.cpp
+        Sources/Network/AServer.cpp)
 
-add_executable(RtypeServer ${NETWORK_SOURCE_FILES} ${THREAD} main.cpp)
+set(THREAD
+        Sources/Thread/Thread/StdThread.cpp
+        Sources/Thread/Thread/UnixThread.cpp
+        Sources/Thread/Condvar/StdCondVar.cpp
+        Sources/Thread/Condvar/UnixCondVar.cpp
+        Sources/Thread/Mutex/ScopeLock.cpp
+        Sources/Thread/Mutex/StdMutex.cpp
+        Sources/Thread/Mutex/UnixMutex.cpp
+        Sources/Thread/Exception/ThreadException.cpp
+        Sources/Thread/Exception/ThreadException.hpp
+        Sources/Thread/Thread/StdThread.cpp Sources/Thread/ThreadFactory.cpp Sources/Thread/ThreadFactory.hpp)
+
+set(SERVER
+        Sources/Server/Server.cpp
+        Sources/Server/Server.hpp)
+
+add_executable(RtypeServer ${SERVER} ${NETWORK_SOURCE_FILES} ${THREAD} main.cpp)
