--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Rtype)
 
 set(CMAKE_CXX_STANDARD 14)
 
+# Global sources network
 set(NETWORK_SOURCE_FILES
         Sources/Network/Socket/ASocket.cpp
         Sources/Network/Socket/TcpSocket.cpp
@@ -13,6 +14,7 @@ set(NETWORK_SOURCE_FILES
         Sources/Network/AClient.cpp
         Sources/Network/AServer.cpp)
 
+# Global sources Thread
 set(THREAD
         Sources/Thread/Thread/StdThread.cpp
         Sources/Thread/Thread/UnixThread.cpp
@@ -30,11 +32,35 @@ set(THREAD
         Sources/Thread/ThreadPool/DoTheJob.cpp
         Sources/Thread/ThreadPool/ThreadPool.cpp)
 
+# Sources Server
 set(SERVER
         Sources/Server/Server.cpp)
+
+# Sources Client
+set(CLIENT
+        Sources/Client/Client.cpp)
+
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-add_executable(RtypeServer ${SERVER} ${NETWORK_SOURCE_FILES} ${THREAD} main.cpp)
-target_link_libraries(RtypeServer Threads::Threads)
+# Make executable server
+set(EXECUTABLE_SERVER_NAME "RtypeServer")
+add_executable(${EXECUTABLE_SERVER_NAME} ${SERVER} ${NETWORK_SOURCE_FILES} ${THREAD} main.cpp)
+target_link_libraries(${EXECUTABLE_SERVER_NAME} Threads::Threads)
+
+# Make executable client
+set(EXECUTABLE_CLIENT_NAME "RtypeClient")
+add_executable(${EXECUTABLE_CLIENT_NAME} ${CLIENT} ${NETWORK_SOURCE_FILES} ${THREAD} main.cpp)
+target_link_libraries(${EXECUTABLE_CLIENT_NAME} Threads::Threads)
+
+
+# Detect and add SFML
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
+#Find any version 2.X of SFML
+#See the FindSFML.cmake file for additional details and instructions
+find_package(SFML 2 REQUIRED network audio graphics window system)
+if(SFML_FOUND)
+    include_directories(${SFML_INCLUDE_DIR})
+    target_link_libraries(${EXECUTABLE_CLIENT_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+endif()
